Fix wrap top margin top

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ a:hover {
 #wrap {
     clear: both;
     background-color: #ffffff;
-    margin-top: 220px;
+    margin-top: 200px;
     padding: 35px 0;
 }
 
